adding ppe detect

--- a/notebooks/hymenoptera/01_setup_data.ipynb
+++ b/notebooks/hymenoptera/01_setup_data.ipynb
@@ -13,15 +13,15 @@
    "id": "1f50c72e",
    "metadata": {},
    "source": [
-    "# Configuração da nuvem\n",
+    "# Cloud configuration\n",
     "\n",
-    "Neste notebook vamos realizar o download dos dados 'hymenoptera' e realizar o upload no bucket s3 da aws.\n",
+    "In this notebook we will download the *hymenoptera* dataset and upload it to an AWS S3 bucket.\n",
     "\n",
-    "1. Importações e configurações\n",
-    "2. Criar o bucket se não existir\n",
-    "3. Download dos dados\n",
-    "4. Validação dos dados\n",
-    "5. Upload para o S3"
+    "1. Imports and settings  \n",
+    "2. Create the bucket if it doesn't exist  \n",
+    "3. Download the data  \n",
+    "4. Data validation  \n",
+    "5. Upload to S3  "
    ]
   },
   {
@@ -29,14 +29,12 @@
    "id": "20e2a964",
    "metadata": {},
    "source": [
-    "## Importações e configurações\n",
-    "\n",
-    "Inicialmente teremos que configurar o "
+    "## Imports and settings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8af94a23",
    "metadata": {},
    "outputs": [
@@ -61,8 +59,8 @@
     "sess = sagemaker.Session(boto_session=boto_session, default_bucket=bucket_name)\n",
     "region = sess.boto_region_name\n",
     "\n",
-    "print(f\"Região: {region}\")\n",
-    "print(f\"Bucket alvo: {bucket_name}\")"
+    "print(f\"Region: {region}\")\n",
+    "print(f\"Target Bucket: {bucket_name}\")"
    ]
   },
   {
@@ -85,9 +83,7 @@
    "id": "054725ac",
    "metadata": {},
    "source": [
-    "## Criar o bucket se não existir\n",
-    "\n",
-    "Importante para não termos algum problema no futuro é garantir que o bucket existe"
+    "##  Create the bucket if it doesn't exist "
    ]
   },
   {
@@ -116,7 +112,7 @@
    "id": "cb72d022",
    "metadata": {},
    "source": [
-    "## Download e Extração dos dados"
+    "## Download and unzip file"
    ]
   },
   {
@@ -133,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "eb9ce3f5",
    "metadata": {},
    "outputs": [
@@ -152,16 +148,16 @@
     "zip_path = os.path.join(local_data_dir, \"hymenoptera_data.zip\")\n",
     "\n",
     "if not os.path.exists(zip_path):\n",
-    "    print(\"Baixando os dados...\")\n",
+    "    print(\"Downloading data...\")\n",
     "    urllib.request.urlretrieve(data_url, zip_path)\n",
-    "    print(\"Download concluído.\")\n",
+    "    print(\"Download completed.\")\n",
     "else:\n",
-    "    print(\"Arquivo zip já existe. Pulando download.\")"
+    "    print(\"Zip file algready exists. Skipping download.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "cc19bbe3",
    "metadata": {},
    "outputs": [
@@ -177,12 +173,12 @@
     "# Extrair os dados\n",
     "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
     "    zip_ref.extractall(local_data_dir)\n",
-    "print(\"Dados extraídos com sucesso.\")"
+    "print(\"Data extracted.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1038ef27",
    "metadata": {},
    "outputs": [
@@ -197,7 +193,7 @@
    "source": [
     "# apagar o arquivo zip para economizar espaço\n",
     "os.remove(zip_path)\n",
-    "print(\"Arquivo zip removido.\")"
+    "print(\"Zip file has been removed.\")"
    ]
   },
   {
@@ -205,12 +201,12 @@
    "id": "ee2ba272",
    "metadata": {},
    "source": [
-    "## Validação dos dados"
+    "## Data Validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "e7cbaccb",
    "metadata": {},
    "outputs": [
@@ -232,7 +228,7 @@
     "phases = ['train', 'val']\n",
     "classes = ['ants', 'bees']\n",
     "\n",
-    "print(\"Validação dos dados extraídos:\")\n",
+    "print(\"Validation of the extracted data:\")\n",
     "for phase in phases:\n",
     "    for cls in classes:\n",
     "        dir_path = os.path.join(base_path, phase, cls)\n",
@@ -242,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "dea38f2b",
    "metadata": {},
    "outputs": [
@@ -268,11 +264,10 @@
     }
    ],
    "source": [
-    "# Visualizando algumas imagens para garantir que os dados estão corretos\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.image as mpimg\n",
     "\n",
-    "# Visualizando algumas imagens de treino\n",
+    "# show some data samples\n",
     "for cls in classes:\n",
     "    img_path = os.path.join(base_path, 'train', cls, os.listdir(os.path.join(base_path, 'train', cls))[0])\n",
     "    img = mpimg.imread(img_path)\n",
@@ -287,7 +282,7 @@
    "id": "f24af209",
    "metadata": {},
    "source": [
-    "## Upload de dados para o bucket"
+    "## Upload the data to s3 bucket"
    ]
   },
   {
@@ -314,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "641bcfe1",
    "metadata": {},
    "outputs": [
@@ -344,8 +339,8 @@
     "\n",
     "s3_data_uri = upload_to_s3_windows(sess, local_dataset_path, bucket_name, prefix)\n",
     "\n",
-    "print(f\"Dados carregados em: {s3_data_uri}. IMPORTANTE: Verifique se os dados foram carregados corretamente no bucket S3.\")\n",
-    "print(\"Upload concluído.\")"
+    "print(f\"Data loaded to: {s3_data_uri}. IMPORTANT: Check if the data was correctly uploaded to the S3 bucket.\")\n",
+    "print(\"Upload completed.\")"
    ]
   },
   {
