--- a/notebooks/hymenoptera/02_training.ipynb
+++ b/notebooks/hymenoptera/02_training.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6d9cce59",
    "metadata": {},
    "outputs": [
@@ -42,9 +42,21 @@
     "sess = sagemaker.Session(boto_session=boto_session, default_bucket=bucket_name)\n",
     "region = sess.boto_region_name\n",
     "\n",
-    "print(f\"Região: {region}\")\n",
-    "print(f\"Bucket alvo: {bucket_name}\")\n",
-    "role = \"arn:aws:iam::002447664581:role/SageMaker-Execution-Role-CV\" "
+    "print(f\"Region: {region}\")\n",
+    "print(f\"Target bucket: {bucket_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f4dd302",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from config_private import IAM_ROLE\n",
+    "role = IAM_ROLE"
    ]
   },
   {
