--- a/notebooks/hymenoptera/03_inference.ipynb
+++ b/notebooks/hymenoptera/03_inference.ipynb
@@ -5,19 +5,25 @@
    "id": "fb0a4a20",
    "metadata": {},
    "source": [
-    "# Deploy e teste do modelo\n",
+    "# Model Deployment and Testing\n",
     "\n",
-    "Este notebook vai:\n",
-    "1. Autenticar.\n",
-    "2. Recuperar modelo treinado\n",
-    "3. Criar o Pytorch Model\n",
-    "4. Deploy\n",
-    "5. Testes"
+    "This notebook will guide you through the complete workflow of deploying and validating your model.\n",
+    "The steps include:\n",
+    "\n",
+    "1. Authentication\n",
+    "\n",
+    "2. Retrieving the trained model\n",
+    "\n",
+    "3. Creating the PyTorch Model in SageMaker\n",
+    "\n",
+    "4. Deploying the model to an endpoint\n",
+    "\n",
+    "5. Running inference tests to validate the deployment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b0476ae7",
    "metadata": {},
    "outputs": [
@@ -42,9 +48,21 @@
     "sess = sagemaker.Session(boto_session=boto_session, default_bucket=bucket_name)\n",
     "region = sess.boto_region_name\n",
     "\n",
-    "print(f\"Região: {region}\")\n",
-    "print(f\"Bucket alvo: {bucket_name}\")\n",
-    "role = \"arn:aws:iam::002447664581:role/SageMaker-Execution-Role-CV\" "
+    "print(f\"Region: {region}\")\n",
+    "print(f\"Target bucket: {bucket_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c7e865e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from config_private import IAM_ROLE\n",
+    "role = IAM_ROLE"
    ]
   },
   {
@@ -52,7 +70,10 @@
    "id": "44fdcde3",
    "metadata": {},
    "source": [
-    "## Recuperar o modelo treinado\n"
+    "## Retrieve the Trained Model\n",
+    "\n",
+    "In this step, we access the model artifact that was generated during the training process and stored in Amazon S3.\n",
+    "This artifact typically contains the trained weights, model configuration, and any additional files required for deployment."
    ]
   },
   {
@@ -75,7 +96,7 @@
     "desc = boto_session.client('sagemaker').describe_training_job(TrainingJobName=training_job_name)\n",
     "model_data_s3 = desc['ModelArtifacts']['S3ModelArtifacts']\n",
     "\n",
-    "print(f\"Artefato do modelo encontrado em: {model_data_s3}\")"
+    "print(f\"Artifact found at: {model_data_s3}\")"
    ]
   },
   {
@@ -83,7 +104,7 @@
    "id": "be4df17a",
    "metadata": {},
    "source": [
-    "## Criar PytorchModel"
+    "## Create PytorchModel"
    ]
   },
   {
@@ -149,12 +170,12 @@
    "id": "06815090",
    "metadata": {},
    "source": [
-    "## Testar a API"
+    "## Testing the API"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "67f92527",
    "metadata": {},
    "outputs": [
@@ -171,26 +192,22 @@
    "source": [
     "import os\n",
     "\n",
-    "# Pega uma imagem local de exemplo\n",
     "test_image_path = '../../data/raw/hymenoptera_data/val/ants/153783656_85f9c3ac70.jpg'\n",
     "\n",
-    "# Lê a imagem em bytes\n",
     "with open(test_image_path, 'rb') as f:\n",
     "    image_bytes = f.read()\n",
     "\n",
-    "# Invoca o Endpoint!\n",
     "response = predictor.predict(image_bytes)\n",
     "\n",
-    "# O retorno são os \"logits\" (pontuação bruta) para [Formiga, Abelha]\n",
-    "print(f\"Resposta bruta do modelo: {response}\")\n",
+    "print(f\"Raw model response: {response}\")\n",
     "\n",
-    "# Processar o resultado\n",
+    "# Process the result\n",
     "import numpy as np\n",
-    "classes = ['formiga', 'abelha']\n",
+    "classes = ['ant', 'bee']\n",
     "result_index = np.argmax(response)\n",
     "confidence = response[0][result_index]\n",
     "\n",
-    "print(f\"\\nPrevisão: {classes[result_index]}\")"
+    "print(f\"\\nPrediction: {classes[result_index]}\")"
    ]
   },
   {
@@ -207,13 +224,13 @@
     ")\n",
     "\n",
     "result = response['Body'].read()\n",
-    "print(f\"Resposta bruta (bytes): {result}\")\n",
+    "print(f\"Raw response (bytes): {result}\")\n",
     "\n",
     "import json\n",
     "try:\n",
-    "    print(\"Resposta decodificada:\", json.loads(result))\n",
+    "    print(\"Decoded response:\", json.loads(result))\n",
     "except:\n",
-    "    print(\"Resposta texto:\", result.decode('utf-8'))"
+    "    print(\"Decoded response (text):\", result.decode('utf-8'))"
    ]
   },
   {
@@ -250,12 +267,12 @@
    "id": "c3903502",
    "metadata": {},
    "source": [
-    "## Apagar o endpoint"
+    "## Shutingdown the endpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f67fb5bd",
    "metadata": {},
    "outputs": [
@@ -269,7 +286,7 @@
    ],
    "source": [
     "predictor.delete_endpoint()\n",
-    "print(\"Endpoint deletado. Sem custos extras.\")"
+    "print(\"Shutdown complete.\")"
    ]
   },
   {
